- Away is displayed when switching automatically to Away-mode due to inactivity, and also when manually switching to this mode
- Status mode is now displayed on receiving side (after status message)
- Status message is now displaying after a hyphen (same behavior with QT Client)
- Fixed accessible hints on channel list and files-tab
Default QT Client:
- Update window title at login with server name
- Status mode is now displayed as text for 3 status (Away, Question, and Streaming media file)
- Away is displayed when switching automatically to Away-mode due to inactivity, and also when manually switching to this mode
- Status mode is now displayed on receiving side (after status message)

Version 5.6, 2020/08/04
Accessible Windows client
- Removed duplex mode for sound devices
- Removed Windows Sound system
- Removed Advanced page from Preferences
- Default sound system, Windows Audio Session, now uses Windows' own echo cancellor, AGC and noise suppression
- User accounts are now sorted alphabetically
- Text message log files are stored with .clog and .ulog extension for channel and user log respectively
- Blank nicknames are set to NoName followed by user ID
- More items are now translatable.
- French, Turkish, German and Chinese languages updated.
- All areas of main window are now labelled
- Slider controls now use down arrow to decrease volume and up arrow to increase volume
- TTS announces volume changes when using shortcut keys Ctrl+Alt+Left/Right and Ctrl+Shift+Left/Right
- When in main channel the application title is now server name
- Blank characters are automatically removed from username and channel name
Default Qt client
- Removed duplex mode for sound devices
- Sound system Windows Audio Session now uses Windows' own echo cancellor, AGC and noise suppression
- Text message log files are stored with .clog and .ulog extension for channel and user log respectively
- Press tab changes focus in text message dialog
- More items are translatable