@@ -357,6 +357,7 @@
     <item id="498">Failed to start selected device Test Selected</item>
     <item id="499">Do Facebook logout?</item>
     <item id="500">Facebook Login</item>
+    <item id="503">Administrator</item>
     <item id="512"> - Unreleased</item>
     <item id="513">TeamTalk 5 Classic Professional v. </item>
     <item id="514">TeamTalk 5 Classic Professional</item>
