@@ -358,6 +358,7 @@
     <item id="498">Impossible de démarrer le périphérique sélectionné. Tester la sélection</item>
     <item id="499">Se déconnecter de Facebook?</item>
     <item id="500">Connexion Facebook</item>
+    <item id="503">Administrateur</item>
     <item id="512"> - Non publié</item>
     <item id="513">TeamTalk 5 Classique Professionnel V</item>
     <item id="514">TeamTalk 5 Classique Professionnel</item>
